# SimpleImageApp

./: .gitignore  AI_INTEGRATION_TASK_LIST.md  AI_MODEL_UPGRADE_TASKS.md  BEFORE_AFTER_DISTORTION_FIX.md  CHANGELOG.md  CODE_CONSISTENCY_REVIEW.md  CRITICAL_FIXES_APPLIED.md  DEBUG_MFSR_FAILURE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_ANALYSIS.md  LOGCAT_ANALYSIS_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_TASK_LIST.md  PHASE_2_COMPLETE.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SCENE_ANALYSIS_PERFORMANCE_FIX.md  SCENE_DETECTION_ANALYSIS.md  SCENE_DETECTION_FIXES_APPLIED.md  SMART_ENHANCEMENT_FINAL_FIX.md  TESTING_GUIDE.md  TEST_CLEANUP.md  TODO_MVP_TASKS.md  build.gradle.kts  gradle.properties  rename_packages.py  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  alignment.cpp  alignment.h  anisotropic_merge.cpp  anisotropic_merge.h  burst_processor.cpp  burst_processor.h  common.h  deghost_enhance.cpp  deghost_enhance.h  drizzle.cpp  drizzle.h  edge_detection.cpp  edge_detection.h  exposure_fusion.cpp  exposure_fusion.h  freq_separation.cpp  freq_separation.h  gpu_compute.cpp  gpu_compute.h  kalman_fusion.cpp  kalman_fusion.h  merge.cpp  merge.h  mfsr.cpp  mfsr.h  neon_utils.h  optical_flow.cpp  optical_flow.h  orb_alignment.cpp  orb_alignment.h  phase_correlation.cpp  phase_correlation.h  pyramid.cpp  pyramid.h  rolling_shutter.cpp  rolling_shutter.h  texture_synthesis.cpp  texture_synthesis.h  texture_synthesis_tiled.cpp  (+6 more)
docs/: ADVANCED_SUPER_RESOLUTION_PROPOSAL.md  CODE_AUDIT_REPORT.md  CONSULTANT_PROPOSAL_ANALYSIS.md  GITHUB_RELEASE_SETUP.md  IMPLEMENTATION_SUMMARY.md  (+20 more)
(+177 files in other folders)
